URL for Creative Assembly

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
 			<footer>
 				<p>
-					A <a href="http://creativeassembly.net" rel="external">Creative Assembly</a> Project - &copy; <?php echo date('Y'); ?> Creative Assembly.
+					A <a href="http://ninefour.co.uk/creativeassembly" rel="external">Creative Assembly</a> Project - &copy; <?php echo date('Y'); ?> Creative Assembly.
 				</p>
 				<p id="tweet">
 					<a href="http://twitter.com/project_meteor" title="Project Meteor on Twitter">@project_meteor</a>
